# Artificial_Intelligence_laboratory_work_5

./: .pre-commit-config.yaml  README.md  pyproject.toml
graphs/: Описание_графа.dot
src/: element_search.py  file_system_search.py  iterative_dfs.py  rights_search.py
